[package]
name = "rusty-photo-print"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.5"
ipp = "5.0.5"
log = "0.4.22"
ratatui = "0.29.0"
thiserror = "1.0.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
